# VSCode-Project-Templates

./: .gitignore  README.md
C++/: CMakeLists.txt
C++/src/: CMakeLists.txt  main.cpp
